--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -24,7 +24,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["skins/yellowCat.png", "skins/greyCat.png", "skins/calicoCat.png", "skins/yellowCat_icon.png", "skins/greyCat_icon.png", "skins/calicoCat_icon.png", "skins/greyDog.PNG", "skins/blackDog.PNG", "skins/yellowDog.PNG", "skins/greyDog_icon.PNG", "skins/blackDog_icon.PNG", "skins/yellowDog_icon.PNG", "payment-example.html", "user-info.js", "secure-license-manager.js", "payment-script-secure.js"],
+      "resources": ["assets/skins/yellowCat.png", "assets/skins/greyCat.png", "assets/skins/calicoCat.png", "assets/skins/yellowCat_icon.png", "assets/skins/greyCat_icon.png", "assets/skins/calicoCat_icon.png", "assets/skins/greyDog.PNG", "assets/skins/blackDog.PNG", "assets/skins/yellowDog.PNG", "assets/skins/greyDog_icon.PNG", "assets/skins/blackDog_icon.PNG", "assets/skins/yellowDog_icon.PNG", "payment-example.html", "user-info.js", "secure-license-manager.js", "payment-script-secure.js"],
       "matches": ["<all_urls>"]
     }
   ],
