--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,7 +11,7 @@
     {
       "matches": ["<all_urls>"],
       "js": ["content.js"],
-      "css": ["cat-pixel-sprites.css"],
+      "css": ["styles/cat-pixel-sprites.css"],
       "run_at": "document_end"
     }
   ],
