--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "__MSG_extensionName__",
+  "name": "Pets in Tabs",
   "version": "1.0.0",
-  "description": "__MSG_extensionDescription__",
+  "description": "Adorable pixel pets that wander around your web pages to keep you company! 🐱🐶✨",
   "default_locale": "ko",
   "background": {
     "service_worker": "background.js"
@@ -29,7 +29,7 @@
     }
   ],
   "externally_connectable": {
-    "matches": ["https://your-payment-site.com/*", "https://localhost:3000/*"]
+    "matches": ["https://jeonsun3629.github.io/petExtension/*", "https://localhost:3000/*"]
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self' 'wasm-unsafe-eval'; object-src 'self';"
