--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -30,7 +30,7 @@
     "matches": ["https://jeonsun3629.github.io/petExtension/*", "https://localhost:3000/*"]
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self' 'wasm-unsafe-eval' 'unsafe-inline' https://www.paypal.com https://js.tosspayments.com; object-src 'self';"
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval' https://www.paypal.com https://js.tosspayments.com; object-src 'self';"
   },
   "action": {
      "default_popup": "popup.html",
