GitHub Pages용 결제 페이지 정리 및 파일 구조 개선

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -22,7 +22,7 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": ["assets/skins/yellowCat.png", "assets/skins/greyCat.png", "assets/skins/calicoCat.png", "assets/skins/yellowCat_icon.png", "assets/skins/greyCat_icon.png", "assets/skins/calicoCat_icon.png", "assets/skins/greyDog.PNG", "assets/skins/blackDog.PNG", "assets/skins/yellowDog.PNG", "assets/skins/greyDog_icon.PNG", "assets/skins/blackDog_icon.PNG", "assets/skins/yellowDog_icon.PNG", "payment/payment.html", "payment/user-info.js", "payment/secure-license-manager.js", "payment/payment-script-secure.js"],
+      "resources": ["assets/skins/yellowCat.png", "assets/skins/greyCat.png", "assets/skins/calicoCat.png", "assets/skins/yellowCat_icon.png", "assets/skins/greyCat_icon.png", "assets/skins/calicoCat_icon.png", "assets/skins/greyDog.PNG", "assets/skins/blackDog.PNG", "assets/skins/yellowDog.PNG", "assets/skins/greyDog_icon.PNG", "assets/skins/blackDog_icon.PNG", "assets/skins/yellowDog_icon.PNG"],
       "matches": ["<all_urls>"]
     }
   ],
