빌드 시스템 업데이트: GitHub Pages용 결제 페이지 통합 및 파일 구조 개선

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "package:extension": "npm run build:prod && cd build && node package.js --extension-only",
     "package:gh-pages": "npm run build:prod && cd build && node package.js --gh-pages-only",
     "clean": "cd build && node scripts/clean.js",
-    "deploy:gh-pages": "npm run build:prod && echo '✅ Build completed. Push to GitHub to deploy to Pages.'"
+    "deploy:gh-pages": "npm run build:prod && echo '✅ Build completed. Push to GitHub to deploy to Pages.'",
+    "test:payment": "echo '🧪 Testing payment page...' && echo '🌐 GitHub Pages: https://jeonsun3629.github.io/petExtension/docs/payment.html'",
+    "build:all": "npm run clean && npm run build:prod && npm run package"
   },
   "devDependencies": {
     "archiver": "^5.3.1",
